Closed
Bug 394384
Opened 18 years ago
Closed 18 years ago
"ASSERTION: Textrun was not completely removed from the cache" with non-breaking hyphen
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: roc)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files, 1 obsolete file)
388 bytes,
text/html
|
Details | |
2.57 KB,
patch
|
pavlov
:
review+
pavlov
:
approval1.9+
|
Details | Diff | Splinter Review |
If I load the testcase and then quit Firefox (Cmd+Q), I see:
###!!! ASSERTION: Textrun was not completely removed from the cache!: 'aTextRun->mCachedWords == 0', file /Users/jruderman/trunk/mozilla/gfx/thebes/src/gfxTextRunWordCache.cpp, line 560
I think the was the testcase is displayed is wrong, too. Shouldn't there be a space between the non-breaking hyphen and the 'A'?
Assignee | ||
Comment 1•18 years ago
|
||
This can lead to hard-to-diagnose crashes
Assignee: nobody → roc
Flags: blocking1.9?
Assignee | ||
Comment 2•18 years ago
|
||
The rendering is correct. CR characters are not linefeeds and do not get converted to spaces. We make them invisible zero-width characters.
Assignee | ||
Comment 3•18 years ago
|
||
This is just an accounting error. We're counting a word in the textrun as referenced by the cache when it's actually not.
Attachment #279057 -
Flags: review?(vladimir)
Assignee | ||
Comment 4•18 years ago
|
||
This is just an accounting error. We're counting a word in the textrun as referenced by the cache when it's actually not.
Attachment #279058 -
Flags: review?(vladimir)
Attachment #279058 -
Flags: approval1.9?
Reporter | ||
Comment 5•18 years ago
|
||
So this bug can't actually lead to hard-to-diagnose crashes?
Updated•18 years ago
|
Attachment #279058 -
Flags: review?(vladimir)
Attachment #279058 -
Flags: review+
Attachment #279058 -
Flags: approval1.9?
Attachment #279058 -
Flags: approval1.9+
Updated•18 years ago
|
Attachment #279057 -
Attachment is obsolete: true
Attachment #279057 -
Flags: review?(vladimir)
Assignee | ||
Comment 6•18 years ago
|
||
This assertion, in general, points to hard-to-diagnose crashes occurring later. In this case, however, the assertion was firing spuriously so this testcase will not lead to crashes.
Assignee | ||
Comment 7•18 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•15 years ago
|
Flags: blocking1.9?
You need to log in
before you can comment on or make changes to this bug.
Description
•