Bug 394384. Fix accounting error when tracking the number of times a textrun is referenced from the word cache. debug-only. r+a=pavlov